--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <maven.flyway.plugin.version>6.0.4</maven.flyway.plugin.version>
     <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
     <org.projectlombok.version>1.18.12</org.projectlombok.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -61,6 +62,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-jsonb</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-postgresql</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -93,6 +98,14 @@
               <version>${org.projectlombok.version}</version>
             </path>
           </annotationProcessorPaths>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-maven-plugin</artifactId>
+        <version>${maven.flyway.plugin.version}</version>
+        <configuration>
+          <configFiles>src/main/resources/db/config/local.conf</configFiles>
         </configuration>
       </plugin>
       <plugin>
