Added config key for rest client

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,4 @@ quarkus:
     jdbc:
       url: ${DB_URL:jdbc:postgresql://localhost:15432/app_user}
 
-de:
-  consol:
-    dus:
-      boundary:
-        restclients:
-          FruitRestClient/mp-rest/url: http://www.fruityvice.com
+fruit-rest/mp-rest/url: http://www.fruityvice.com
