--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-opentracing</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.opentracing.contrib</groupId>
+      <artifactId>opentracing-jdbc</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
