--- a/localdeployment/docker-compose.yml
+++ b/localdeployment/docker-compose.yml
@@ -15,3 +15,22 @@ services:
       - POSTGRES_DB=postgres
     ports:
       - '15432:5432'
+  oidc-service:
+    image: jboss/keycloak:9.0.3@sha256:e327b52ed4dbdb1875250d6eaed803d7a5453d0ca3e8f2a35b662499293d684c
+    volumes:
+      - ./keycloak/app.json:/tmp/app.json
+    environment:
+      - DB_VENDOR=postgres
+      - DB_ADDR=dbms-service
+      - DB_PORT=5432
+      - DB_USER=keycloak
+      - DB_PASSWORD=keycloak
+      - DB_DATABASE=keycloak
+      - KEYCLOAK_HTTP_PORT=8080
+      - KEYCLOAK_USER=keycloak
+      - KEYCLOAK_PASSWORD=keycloak
+      - KEYCLOAK_IMPORT=/tmp/app.json
+    ports:
+      - '8090:8080'
+    depends_on:
+      - dbms-service
