--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,10 @@
       <groupId>io.opentracing.contrib</groupId>
       <artifactId>opentracing-jdbc</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-elytron-security-oauth2</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
